--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,6 +8,7 @@
 <%= stylesheet_link_tag 'effect2.css' %>
 <!--<![endif]-->
 <%= stylesheet_link_tag lists_styles_path(:action => 'lists', :update => @styles_last_update) %>
+<%= auto_discovery_link %>
 <meta http-equiv="content-type" content="text-html; charset=utf-8"/>
 <meta name="Keywords" content='talks, seminars, <%= HOST_INSTITUTE %>'/>
 </head>
