--- a/app/views/shared/_navigationbar.html.erb
+++ b/app/views/shared/_navigationbar.html.erb
@@ -59,7 +59,7 @@
 	</li>
 	<% else %>
 	<li><%= link_to 'Create an account', user_path(:action => 'new') %>
-	<li><%= link_to 'Sign in', login_path(:return_url => request.fullpath) %></li>
+	<li><%= link_to_sign_in %></li>
 	<% end %>
       </ul>
       </div><!--/.nav-collapse -->
