List tickles for admin.

--- a/app/views/tickles/show.html.erb
+++ b/app/views/tickles/show.html.erb
@@ -1,41 +1,41 @@
 <p>
   <b>Created on:</b>
-  <%=h @tickle.created_on %>
+  <%= @tickle.created_at %>
 </p>
 
 <p>
   <b>About:</b>
-  <%=h @tickle.about_id %>
+  <%= @tickle.about_id %>
 </p>
 
 <p>
   <b>About type:</b>
-  <%=h @tickle.about_type %>
+  <%= @tickle.about_type %>
 </p>
 
 <p>
   <b>Sender:</b>
-  <%=h @tickle.sender_id %>
+  <%= @tickle.sender_id %>
 </p>
 
 <p>
   <b>Recipient email:</b>
-  <%=h @tickle.recipient_email %>
+  <%= @tickle.recipient_email %>
 </p>
 
 <p>
   <b>Sender email:</b>
-  <%=h @tickle.sender_email %>
+  <%= @tickle.sender_email %>
 </p>
 
 <p>
   <b>Sender name:</b>
-  <%=h @tickle.sender_name %>
+  <%= @tickle.sender_name %>
 </p>
 
 <p>
   <b>Sender ip:</b>
-  <%=h @tickle.sender_ip %>
+  <%= @tickle.sender_ip %>
 </p>
 
 <%= link_to 'Back', tickles_path %>
