--- a/app/views/tickles/index.html.erb
+++ b/app/views/tickles/index.html.erb
@@ -2,26 +2,26 @@
 
 <table>
   <tr>
+    <th>ID</th>
     <th>Created on</th>
-    <th>About</th>
     <th>About type</th>
+    <th>About</th>
     <th>Sender</th>
-    <th>Recipient email</th>
     <th>Sender email</th>
-    <th>Sender name</th>
+    <th>Recipient email</th>
     <th>Sender ip</th>
   </tr>
   
 <% for tickle in @tickles %>
   <tr>
-    <td><%=h tickle.created_on %></td>
-    <td><%=h tickle.about_id %></td>
-    <td><%=h tickle.about_type %></td>
-    <td><%=h tickle.sender_id %></td>
-    <td><%=h tickle.recipient_email %></td>
-    <td><%=h tickle.sender_email %></td>
-    <td><%=h tickle.sender_name %></td>
-    <td><%=h tickle.sender_ip %></td>
+    <td><%=tickle.id %></td>
+    <td><%= tickle.created_at %></td>
+    <td><%= tickle.about_type %></td>
+    <td><%= tickle.about_id %></td>
+    <td><%= link_user tickle.sender %></td>
+    <td><%= tickle.sender_email %></td>
+    <td><%= tickle.recipient_email %></td>
+    <td><%= tickle.sender_ip %></td>
     <td><%= link_to 'Show', tickle_path(tickle) %></td>
   </tr>
 <% end %>
