Implemented users#index using resourceful routing.

--- a/app/views/users/change_password.html.erb
+++ b/app/views/users/change_password.html.erb
@@ -2,7 +2,7 @@
 
 <%= error_messages_for :user %>
 
-<%= form_tag(:action => 'update', :id => @user) do %>
+<%= form_for(@user) do %>
 <table>
 	<tr><td>Your old password:</td><td><%= password_field :user, :existing_password %></td></tr>
 	<tr><td>Your new password:</td><td><%= password_field :user, :password, :value => '' %></td></tr>
