--- a/app/views/posted_talks/show.html.erb
+++ b/app/views/posted_talks/show.html.erb
@@ -2,7 +2,7 @@
 <div class='vevent preview'>
 	<%= logo(@talk, :medium) %>
 	<h1 class='summary'><%= @talk.title %> <span class='note'>(<%= t :waiting_for_approval %>)</span></h1>
-	<%= link_to_if @talk.speaker, @talk.name_of_speaker, { :controller => "user", :action => "show", :id => @talk.speaker  } %>		
+	<%= link_to_if @talk.speaker, @talk.name_of_speaker, @talk.speaker %>		
 	<ul class='details'>
 		<li><%= image_tag 'clock.jpg' %><%= format_time_of_talk @talk %></li>
 		<li><%= image_tag 'house.jpg' %><%= link_list @talk.venue %>.</li>
