--- a/app/views/talks/show.html.erb
+++ b/app/views/talks/show.html.erb
@@ -3,7 +3,7 @@
   <%= logo(@talk, :medium) %>
   <h1 class='summary'><%= @talk.title %></h1>
   <ul class='details'>
-    <li>	<%= link_to_if @talk.speaker, @talk.name_of_speaker, { :controller => "user", :action => "show", :id => @talk.speaker  } %></li>
+    <li>	<%= link_to_if @talk.speaker, @talk.name_of_speaker, @talk.speaker  %></li>
     <li><%= format_time_of_talk @talk, true %></li>
     <li><%= link_list @talk.venue %></li>
   </ul>
