--- a/app/views/show/detailed.html.erb
+++ b/app/views/show/detailed.html.erb
@@ -13,7 +13,7 @@
 
 <ul>
 	<li>Part of <%= link_list talk.series %></li>
-	<li>Speaker: <%= link_to_if talk.speaker, talk.name_of_speaker, user_url(:id => talk.speaker) %></li>
+	<li>Speaker: <%= link_to_if talk.speaker, talk.name_of_speaker, talk.speaker %></li>
 	<li><%= format_time_of_talk talk %></li>
 	<li><%= link_list talk.venue %>.</li>
 </ul>
