--- a/app/views/users/change_password.html.erb
+++ b/app/views/users/change_password.html.erb
@@ -2,11 +2,11 @@
 
 <%= error_messages_for :user %>
 
-<%= form_for(@user) do %>
+<%= form_for(@user) do |f| %>
 <table>
-	<tr><td>Your old password:</td><td><%= password_field :user, :existing_password %></td></tr>
-	<tr><td>Your new password:</td><td><%= password_field :user, :password, :value => '' %></td></tr>
-	<tr><td>Your new password again:</td><td><%= password_field :user, :password_confirmation %></td></tr>
+	<tr><td>Your old password:</td><td><%= f.password_field :existing_password %></td></tr>
+	<tr><td>Your new password:</td><td><%= f.password_field :password, :value => '' %></td></tr>
+	<tr><td>Your new password again:</td><td><%= f.password_field :password_confirmation %></td></tr>
 </table>
 <%= submit_tag 'Change password' %>
 <% end %>
