--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,6 +24,7 @@
     <td><%= user.administrator? %></td>
     <td><%= user.last_login %></td>
     <td><%= user.created_at %></td>
+    <td><%= suspend_link(user) %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: "Are you sure to delete #{user.name}'s account (#{user.email})?" } %></td>
