Moved featured talks in the main panel. Should also restrict them to upcoming talks.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,3 +28,7 @@
     })(jQuery);
 
 </script>
+
+<h2>Featured talks</h2>
+<%= render :partial => 'show/simple_talk', :collection => @featured_talks, :locals => {:max_abstract => 100} %>
+
