--- a/app/views/lists/details.html.erb
+++ b/app/views/lists/details.html.erb
@@ -23,7 +23,7 @@
 			<ul>
 				<li><%= link_to 'Create Custom View', :controller => 'custom_view', :action => 'index', :list => @list %></li>
 				<li><%= link_to 'Subscribe using ical/vcal', :controller => 'show', :action => 'index', :id => @list, :only_path => false, :format => :ics, :protocol => 'webcal://'   %> (<%= document 'Help with icalendar' %>)</li>
-			        <li><%= link_to 'Subscribe to RSS feed', list_url(:id => @list, :action => 'index', :format => :rss)%><br/> - <i>please read <%= link_to "notes", document_url(:name => 'RSS feeds') %> first</i></li>
+			        <li><%= link_to 'Subscribe to RSS feed', list_url(:id => @list, :action => 'index', :format => :rss)%><br/> - <i>please read <%= link_to "notes", document_path('RSS feeds') %> first</i></li>
 				<li>Manage e-mail reminders<br/> - <i>see link at top of page</i></li>
 				<li><%= link_to 'Plain Text View', list_url(:id => @list, :action => 'index', :format => :txt) %></li>
 			</ul>
