--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,8 +3,8 @@
   <div class="container">
 <p class="cfooter">&copy; 2006-2009 <a href="http://talks.cam.ac.uk/">Talks.cam</a>, University of Cambridge. &copy; 2012- <a href="https://github.com/ryotat/talks.tokyo">Talks.Tokyo</a></p>
 <ul class="footer-links">
-  <li><%= link_to 'Contact Us', document_url(:name => 'Contact') %></li>
-  <li><%= link_to 'Help and Documentation', document_url(:name => 'Documentation') %></li>
+  <li><%= link_to 'Contact Us', document_path('Contact') %></li>
+  <li><%= link_to 'Help and Documentation', document_path('Documentation') %></li>
   <li><%= document 'Privacy and Publicity' %></li>
 </ul>
 <!--If you wish to give level of conformance after testing, edit this and uncomment it-->
