--- a/app/views/lists/choose.html.erb
+++ b/app/views/lists/choose.html.erb
@@ -13,10 +13,10 @@
 you can add it to <%=link_to User.current.personal_list.name, new_talk_path(:list_id => User.current.personal_list.id )%>.
 <br/>
 Please note that although your personal list will not appear in the index or search results, it will still be found by Google and similar sites.
-(<%= link_to 'Tell me more', document_url(:name => 'Privacy and Publicity') %>)
+(<%= link_to 'Tell me more', document_path('Privacy and Publicity') %>)
 <% else %>
 you can add it to your personal list. Unfortunately you appear to have deleted it; to get your personal list re-instated, please
-<%= link_to 'Contact Us', document_url(:name => 'Contact') %>.
+<%= link_to 'Contact Us', document_path('Contact') %>.
 <% end %>
 </p>
 </div>
