--- a/app/views/lists/edit_details.html.erb
+++ b/app/views/lists/edit_details.html.erb
@@ -15,7 +15,7 @@
 <p><%= logo @list, :medium %><%= logo @list, :small %></p>
 <p><%= f.check_box :ex_directory %> If checked, will not appear in the
 index or search results, but will still be found by Google and similar sites.
-(<%= link_to 'Tell me more', document_url(:name => 'Privacy and Publicity') %>)
+(<%= link_to 'Tell me more', document_path('Privacy and Publicity') %>)
 </p>
 </div>
 <p><%= submit_tag 'Save' %>  or <%= link_to 'Cancel', @list %></p>	
