--- a/app/views/talks/edit.html.erb
+++ b/app/views/talks/edit.html.erb
@@ -36,7 +36,7 @@
 	<p class='emailcheck'><%= f.check_box :ex_directory %> If checked,
 this talk will not appear in the index or search results, but will still be
 found by Google and similar sites.
-(<%= link_to 'Tell me more', document_url(:name => 'Privacy and Publicity') %>)</p>
+(<%= link_to 'Tell me more', document_path('Privacy and Publicity') %>)</p>
 
 	<p><%= submit_tag 'Save'%> or <%= link_to 'Cancel', @talk.id ? talk_url(:id => @talk.id) : list_url(:id => @talk.series.id ) %></p>
 	
