--- a/app/assets/stylesheets/talks.css
+++ b/app/assets/stylesheets/talks.css
@@ -152,7 +152,7 @@ text-align: center;
     padding: 5px;
     background-color: #FFFFF2;
     border: 1px solid #ccc;
-    border-style: none solid solid; */
+    border-style: none solid solid;
 }
 .talk .sidebar li:first-child {
     border-top: 1px solid #ccc;
