--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,6 +14,7 @@ Before you continue on to use <%=SITE_NAME %>, we would be grateful if you could
 	<tr><td>Name:</td><td><%= user.text_field :name %></td><td>e.g. Dr No One</td></tr>
 	<tr><td>Affiliation:</td><td><%= user.text_field :affiliation %></td><td>e.g. University of Nowhere, Kansas</td></tr>
 		<tr><td>A picture:</td><td><%= user.file_field :image %></td><td><%= logo @user, :medium %></td></tr>
+		<tr><td>Preferred language:</td><td><%= user.select :locale, locale_options %></td></tr>
 		<tr><td>Reminders:</td><td colspan='2'><%= user.check_box :send_emails_about_personal_list %> Send emails reminding you of talks that you have added to your personal list.</td></tr>
 		<tr><td></td><td colspan='2'><%= link_to "Download talks on your personal list to your calendar", :controller => 'show', :action => 'ics', :id => @user.lists.first, :only_path => false, :protocol => 'webcal://'   %> <br/>(Requires Apple iCal, Mozilla Sunbird, Ximian Evolution or the Remote Calendars plug-in for Microsoft Outlook).</td></tr>
 		<tr><td></td><td><%= submit_tag 'Save details' %></td><td></td></tr>
