--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,7 @@
     <th>Name</th>
     <th>Affiliation</th>
     <th>Email</th>
+    <th>Language</th>
     <th>Ex directory</th>
     <th>Suspended</th>
     <th>Administrator</th>
@@ -19,6 +20,7 @@
     <td><%= user.name %></td>
     <td><%= user.affiliation %></td>
     <td><%= user.email %></td>
+    <td><%= t(user.locale) %></td>
     <td><%= user.ex_directory %></td>
     <td><%= suspended?(user) %></td>
     <td><%= user.administrator? %></td>
