Implemented weekly/daily emails for lists with mailing_list_address.

--- a/app/views/mailer/daily_list.text.erb
+++ b/app/views/mailer/daily_list.text.erb
@@ -1,6 +1,8 @@
 <%= @text %>
 
 **********
+<% if @user %>
 To unsubscribe, please use this link: http://<%= @host %>/reminder (You will need to log into your <%=SITE_NAME %> account).
+<% end %>
 
 If you have any questions please contact <%= WEBMASTER %>
