--- a/app/views/show/email.text.erb
+++ b/app/views/show/email.text.erb
@@ -3,21 +3,23 @@ Error: <%=error%>.
 <% end %>
 
 <%= @talks.empty? ? '(No talks)' : ''%><% @talks.group_by(&:date).each do |date,talks| %>
-<%= date.to_time.strftime '%A %d %B %Y' %>
-<%= '-' * date.to_time.strftime('%A %d %B %Y').size %><% talks.sort_by { |talk| talk.start_time }.each do |talk| %>
+<%= l date, :format => :long  %>
+---------------------------
+<% talks.sort_by { |talk| talk.start_time }.each do |talk| %>
 <%= talk.start_time.strftime('%H:%M') %> <%= talk.title %><% end %>
 <% end %>
-In detail:
+
+<%= t('show.email.detail') %>
 *********
 <% @talks.group_by(&:date).each do |date,talks| %>
-<%= date.to_time.strftime '%A %d %B %Y' %>
-<%= '-' * date.to_time.strftime('%A %d %B %Y').size %>
+<%= l date, :format => :long %>
+---------------------------
 <% talks.sort_by { |talk| talk.start_time }.each do |talk| %>
 <%= talk.series.name %>
 <%= talk.title.upcase %>
- <%= talk_url(:id => talk ) %>
+ <%= talk_url(talk) %>
  <%= talk.name_of_speaker %><% if talk.special_message && !talk.special_message.empty? %><%= "\n #{talk.special_message}" %><% end %>
- <%= talk.start_time.strftime('%A %d %B %Y, %H:%M - ')+talk.end_time.strftime('%H:%M') %> <%= talk.venue && talk.venue.name %>
+ <%= talk.start_time.strftime('%H:%M') %>-<%= talk.end_time.strftime('%H:%M') %> <%= talk.venue && talk.venue.name %>
 <%= talk.abstract %>
 
 <% end %><% end %>
