Added 'About' link in navbar.

--- a/app/views/shared/_navigationbar.html.erb
+++ b/app/views/shared/_navigationbar.html.erb
@@ -6,6 +6,9 @@
 	<li>
 	  <%= link_to SITE_NAME, home_path, :class => "brand" %>
 	</li>
+	<li>
+	  <%= link_to "About", document_path('Documentation') %>
+	</li>
       </ul>
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
         <span class="icon-bar"></span>
