--- a/app/views/show/outline.html.erb
+++ b/app/views/show/outline.html.erb
@@ -1,13 +1,13 @@
-<h3><%= @list.name %></h3>
-<ul class="nav nav-tabs" id="myTab">
-  <li class="active"><a href="#description" data-toggle="tab"><%= t 'show.outline.description' %></a></li>
-  <li><a href="#list" data-toggle="tab"><%= t 'show.outline.list' %></a></li>
+<h2><%= @list.name %></h2>
+<ul class="nav nav-tabs">
+  <li class="active"><a href='#description<%= @list.id %>' data-toggle="tab"><%= t 'show.outline.description' %></a></li>
+  <li><a href='#list<%= @list.id %>' data-toggle="tab"><%= t 'show.outline.list' %></a></li>
 </ul>
 <div class="tab-content">
-  <div class="tab-pane active" id="description">
+  <div class="tab-pane active" id='description<%= @list.id %>'>
     <%= @list.details_filtered ? @list.details_filtered.html_safe : nil %>
   </div>
-  <div class="tab-pane" id="list">
+  <div class="tab-pane" id='list<%= @list.id %>'>
     <%= render :template => 'show/minimalist' %>
   </div>
 </div>
