Temporarilly showing past talks instead of featured talks.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
     <%= render :partial => 'show/simple_talk', :collection => @upcoming_talks, :locals => {:max_abstract => 100} %>
   </div>
   <div class="span4">
-    <h2>Featured talks</h2>
-    <%= render :partial => 'show/simple_talk', :collection => @featured_talks, :locals => {:max_abstract => 100} %>
+    <h2>Past talks</h2>
+    <%= render :partial => 'show/simple_talk', :collection => @past_talks, :locals => {:max_abstract => 100} %>
   </div>
 </div>
