--- a/app/views/show/_list_details.html.erb
+++ b/app/views/show/_list_details.html.erb
@@ -7,7 +7,7 @@
 <%= @list.details_filtered ? @list.details_filtered.html_safe : nil %>
 </div>
 <% if @list.editable? %>
-<%= append_content ".details p", icon_link('icon-pencil', t(:edit), edit_details_list_path(@list), :class => "hide btn") %>
+<%= append_content ".details>p:last-child", icon_link('icon-pencil', t(:edit), edit_details_list_path(@list), :class => "hide btn") %>
 <% end %>
 <div class="btn-toolbar">
 <div class="btn-group">
