--- a/app/views/show/_list_details.html.erb
+++ b/app/views/show/_list_details.html.erb
@@ -1,44 +1,43 @@
-
 <div class='listdetail'>
-	<%= logo(@list, :medium, :link => list_path(@list)) %>
-<h1><%= link_list @list %></h1>
-
-<div class="details" rel='talks-hidden-btn'>
-<%= @list.details_filtered ? @list.details_filtered.html_safe : nil %>
-</div>
-<% if @list.editable? %>
-<%= append_content ".details>p:last-child", icon_link('icon-pencil', t(:edit), edit_details_list_path(@list), :class => "hide btn") %>
-<% end %>
-<div class="btn-toolbar">
-<div class="btn-group">
-<%= upcoming_link(@today) %>
-<%= archive_link(@today) %>
-</div>
-<div class="btn-group">
-<%= add_list_to_list_button %>
-<%= subscribe_by_ical_button %>
-<%= subscribe_by_email_button %>
-</div>
-<% if User.current %>
-<div class="btn-group">
- <% if @list.editable? %>
- <%= link_to icon_tag('icon-plus')+'Add a new talk', new_talk_path(:list_id => @list), :class => "btn" %>
- <% end %>
- <%= link_to icon_tag('icon-cog'), '#', :class => "btn dropdown-toggle", :data => { :toggle => "dropdown"} %>
-  <ul class="dropdown-menu">
+  <%= logo(@list, :medium, :link => list_path(@list)) %>
+  <div class="details" rel='talks-hidden-btn'>
     <% if @list.editable? %>
-    <li><%= link_to icon_tag('icon-pencil')+'Edit this list', edit_list_path( @list, :action => "edit" ) %></li>
-    <li><%= link_to icon_tag('icon-circle-arrow-left')+'Show a link to submit a talk', show_talk_post_url_list_path(@list), :rel => 'talks-modal' %></li>
+    <span style="float:right">
+      <%=  icon_link('icon-pencil', t(:edit), edit_details_list_path(@list), :class => "hide btn") %>
+    </span>
     <% end %>
+    <h1><%= link_list @list %></h1>
+    <%= @list.details_filtered ? @list.details_filtered.html_safe : nil %>
+  </div>
+  <div class="btn-toolbar">
+    <div class="btn-group">
+      <%= upcoming_link(@today) %>
+      <%= archive_link(@today) %>
+    </div>
+    <div class="btn-group">
+      <%= add_list_to_list_button %>
+      <%= subscribe_by_ical_button %>
+      <%= subscribe_by_email_button %>
+    </div>
     <% if User.current %>
-    <li><%= link_to icon_tag('icon-envelope')+'Tell a friend', new_tickle_path('tickle[about_id]' => @list.id, 'tickle[about_type]' => 'List'), :rel => 'talks-modal' %></li>
+    <div class="btn-group">
+      <% if @list.editable? %>
+      <%= link_to icon_tag('icon-plus')+'Add a new talk', new_talk_path(:list_id => @list), :class => "btn" %>
+      <% end %>
+      <%= link_to icon_tag('icon-cog'), '#', :class => "btn dropdown-toggle", :data => { :toggle => "dropdown"} %>
+      <ul class="dropdown-menu">
+	<% if @list.editable? %>
+	<li><%= link_to icon_tag('icon-pencil')+'Edit this list', edit_list_path( @list, :action => "edit" ) %></li>
+	<li><%= link_to icon_tag('icon-circle-arrow-left')+'Show a link to submit a talk', show_talk_post_url_list_path(@list), :rel => 'talks-modal' %></li>
+	<% end %>
+	<% if User.current %>
+	<li><%= link_to icon_tag('icon-envelope')+'Tell a friend', new_tickle_path('tickle[about_id]' => @list.id, 'tickle[about_type]' => 'List'), :rel => 'talks-modal' %></li>
+	<% end %>
+	<li><%= link_to icon_tag('icon-wrench')+'Create custom view', custom_view_path(:action => 'index', :list => @list) %></li>
+	<li><%= link_to icon_tag('icon-cog')+'Further detail', details_list_path( @list ) %></li>
+      </ul>
+    </div>
     <% end %>
-    <li><%= link_to icon_tag('icon-wrench')+'Create custom view', custom_view_path(:action => 'index', :list => @list) %></li>
-    <li><%= link_to icon_tag('icon-cog')+'Further detail', details_list_path( @list ) %></li>
-  </ul>
-</div>
-<% end %>
-</div>
-<!-- <%= auto_discovery_link_tag(:rss, {:action => "rss", :id => @list}) %> -->
+  </div>
 </div>
 
