--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,4 +11,6 @@
 <%= auto_discovery_link %>
 <meta http-equiv="content-type" content="text-html; charset=utf-8"/>
 <meta name="Keywords" content='talks, seminars, <%= HOST_INSTITUTE %>'/>
+<%= meta_twitter_card %>
+<%= meta_opengraph %>
 </head>
